Stop overflowed code blocks from being truncated
Ensure scrollbar instead

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -236,7 +236,7 @@ code, pre {
   font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
   color: #333;
   font-size: 12px;
-  overflow-x: auto;
+  overflow-x: scroll;
 }
 
 pre {
